EnvoyTeenusele/Envoy-Conf.json
{
  "static_resources": {
    "listeners": [
      {
        "address": {
          "socket_address": {
            "address": "127.0.0.1",
            "port_value": 5100
          }
        },
        "filter_chains": {
          "filters": [
            {
              "name": "envoy.http_connection_manager",
              "config": {
                "stat_prefix": "ingress_http",
                "http_filters": [
                  {
                    "name": "envoy.router",
                    "config": {}
                  }
                ],
                "route_config": {
                  "virtual_hosts": [
                    {
                      "name": "Mesh",
                      "domains": "*",
                      "routes": [
                        {
                          "route": {
                            "cluster": "monkey"
                          },
                          "match": {
                            "prefix": "/monkey"
                          }
                        },
                        {
                          "route": {
                            "cluster": "banana"
                          },
                          "match": {
                            "prefix": "/banana"
                          }
                        }
                      ]
                    }
                  ]
                }
              }
            }
          ]
        }
      }
    ],
    "clusters": [
      {
        "name": "monkey",
        "type": "STRICT_DNS",
        "connect_timeout": "1s",
        "hosts": [
          {
            "socket_address": {
              "address": "127.0.0.1",
              "port_value": 5000
            }
          },
          {
            "socket_address": {
              "address": "127.0.0.1",
              "port_value": 5001
            }
          }
        ]
      },
      {
        "name": "banana",
        "type": "STRICT_DNS",
        "connect_timeout": "1s",
        "hosts": [
          {
            "socket_address": {
              "address": "127.0.0.1",
              "port_value": 5002
            }
          },
          {
            "socket_address": {
              "address": "127.0.0.1",
              "port_value": 5003
            }
          }
        ]
      }
    ]
  },
  "admin": {
    "access_log_path": "/dev/null",
    "address": {
      "socket_address": {
        "address": "127.0.0.1",
        "port_value": "9001"
      }
    }
  }
}
